shifter/out_test_1/openshift-infra/hawkular-cassandra.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"metrics-infra":"hawkular-cassandra","name":"hawkular-cassandra"},"name":"hawkular-cassandra","namespace":"openshift-infra"},"spec":{"ports":[{"name":"cql-port","port":9042,"targetPort":"cql-port"},{"name":"thrift-port","port":9160,"targetPort":"thrift-port"},{"name":"tcp-port","port":7000,"targetPort":"tcp-port"},{"name":"ssl-port","port":7001,"targetPort":"ssl-port"}],"selector":{"type":"hawkular-cassandra"}}}
  creationTimestamp: "2022-04-19T14:06:20Z"
  labels:
    metrics-infra: hawkular-cassandra
    name: hawkular-cassandra
  name: hawkular-cassandra
  namespace: openshift-infra
  resourceVersion: "2987"
  selfLink: /api/v1/namespaces/openshift-infra/services/hawkular-cassandra
  uid: e36dc76e-bfe9-11ec-b9cc-42010a000003
spec:
  clusterIP: 172.30.207.120
  ports:
  - name: cql-port
    port: 9042
    protocol: TCP
    targetPort: cql-port
  - name: thrift-port
    port: 9160
    protocol: TCP
    targetPort: thrift-port
  - name: tcp-port
    port: 7000
    protocol: TCP
    targetPort: tcp-port
  - name: ssl-port
    port: 7001
    protocol: TCP
    targetPort: ssl-port
  selector:
    type: hawkular-cassandra
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
