shifter/out_test_1/openshift-infra/hawkular-metrics.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{},"labels":{"metrics-infra":"hawkular-metrics"},"name":"hawkular-metrics","namespace":"openshift-infra"},"spec":{"host":"hawkular-metrics.okd.shifter.cloud","tls":{"destinationCACertificate":"-----BEGIN CERTIFICATE-----\nMIIC5jCCAc6gAwIBAgIBATANBgkqhkiG9w0BAQsFADAkMSIwIAYDVQQDDBltZXRy\naWNzLXNpZ25lckAxNjUwMzc3MTI4MB4XDTIyMDQxOTE0MDUyOFoXDTI3MDQxODE0\nMDUyOVowJDEiMCAGA1UEAwwZbWV0cmljcy1zaWduZXJAMTY1MDM3NzEyODCCA [...]
  creationTimestamp: "2022-04-19T14:06:38Z"
  labels:
    metrics-infra: hawkular-metrics
  name: hawkular-metrics
  namespace: openshift-infra
  resourceVersion: "3116"
  selfLink: /apis/route.openshift.io/v1/namespaces/openshift-infra/routes/hawkular-metrics
  uid: ee255dcd-bfe9-11ec-b9cc-42010a000003
spec:
  rules:
  - host: hawkular-metrics.okd.shifter.cloud
    http:
      paths:
      - backend:
          service:
            name: hawkular-metrics
            port: {}
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"metrics-infra":"hawkular-metrics","name":"hawkular-metrics"},"name":"hawkular-metrics","namespace":"openshift-infra"},"spec":{"ports":[{"port":443,"targetPort":"https-endpoint"}],"selector":{"name":"hawkular-metrics"}}}
  creationTimestamp: "2022-04-19T14:06:18Z"
  labels:
    metrics-infra: hawkular-metrics
    name: hawkular-metrics
  name: hawkular-metrics
  namespace: openshift-infra
  resourceVersion: "2964"
  selfLink: /api/v1/namespaces/openshift-infra/services/hawkular-metrics
  uid: e25a558d-bfe9-11ec-b9cc-42010a000003
spec:
  clusterIP: 172.30.169.71
  ports:
  - port: 443
    protocol: TCP
    targetPort: https-endpoint
  selector:
    name: hawkular-metrics
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
